# ffmpeg_demo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sinieco/ffmpeg_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio_player.c  audio_video_player.c  com_sinieco_ffmpeg_demo_PlayController.h  com_sinieco_ffmpeg_demo_VideoUtils.h  ffmpeg_decoder.c  ffmpeg_player.c  my_player.c  play_sound_on_audiotrack.c
app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h
app/src/main/java/com/sinieco/ffmpeg_demo/: MainActivity.java  PlayController.java  VideoUtils.java  VideoView.java  XPermissionUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/sinieco/ffmpeg_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
